# TP2

./: .env  .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt
TP1-git-avance/: README.md
TP2/: main.py
src/TP2/: main.py
